--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/links.css">
     <link rel="stylesheet" href="/css/estilos.css"> 
   </head>
@@ -83,8 +83,7 @@
       <div class="contenedor-footer">
         <div class="content-foo">
           <h4>Correo electronico</h4>
-          <a target="_blank" class="link-s" href="mailto:adriancraft.addons@gmail.com?body=Hola AdrianCraft,
-          Me comunico contigo para decirte">adriancraft.addons@gmail.com</a>
+          <a target="_blank" class="link-s" href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte">agacraft.addons@gmail.com</a>
         </div>
         <div class="content-foo">
           <h4>YouTube</h4>
