--- a/pruebas.html
+++ b/pruebas.html
@@ -1,13 +1,14 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Fundas de equipamiento(addon)|AdrianCraft</title>
+    <title>Pruebas|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -18,7 +19,7 @@
         <a href="/yt">YT</a>
       </nav>
       <section class="textos-header">
-        <h1>Fundas de equipamiento</h1>
+        <h1>Pruebas</h1>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -29,14 +30,7 @@
     <main>
       <section class="section-1">
         <div class="texto-box">
-          <h3 class="texto">
-            "Fundas de equipamiento" es un addon que cambia los diseños (no los modelos 3D) de escudo, elytas y los tridentes
-            (estos no cambian mucho)
-          </h3>
-          <h3 class="texto">
-            Se recomienda usar la textura <a href="/texturas/Escudo-secundario">Escudo secundario</a> para que no se volteen los
-            diseños
-          </h3>
+          <h3 class="texto">Esta pagina es de pruebas de codigos</h3>
         </div>
         <div class="contenedor">
           <div class="galeria-port">
@@ -60,14 +54,13 @@
           <a
             target="_blank"
             class="link-s"
-            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft,
-          Me comunico contigo para decirte"
+            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft,Me comunico contigo para decirte"
             >agacraft.addons@gmail.com</a
           >
         </div>
         <div class="content-foo">
           <h4>YouTube</h4>
-          <a class="link-s" target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
+          <a class="link-s" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w" target="_blank">AdrianCraft</a>
         </div>
       </div>
       <h2 class="titulo-final">&copy; AdrianCraft</h2>
