--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Variantes de madera(addon)|AdrianCraft</title>
+    <title>ChoesinCraft(addon)|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
@@ -18,7 +18,7 @@
         <a href="/yt">YT</a>
       </nav>
       <section class="textos-header">
-        <h1>Variantes de madera</h1>
+        <h1>ChoesinCraft</h1>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -28,45 +28,10 @@
     </header>
     <main>
       <section class="section-1">
-        <h4 class="titulo">Variantes de maderas</h4>
-        <div class="texto-box">
-          <h3 class="texto">
-            "Variantes de maderas" agrega variaciones de bloques e items de cada tipo de madera los cuales para craftear se nesita
-            una mesa especial (mesa de tallado) a continuacion los crafteos de los objetos
-          </h3>
-        </div>
-        <div class="contenedor">
-          <div class="galeria-port">
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/mesa-de-tallado.gif" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Palos.gif" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/soporte-de-armadura.gif" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/mesa-de-crafteo.png" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Cofres.png" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/Variantes-de-madera/Librerias.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="texto-box">
-          <h3 class="texto">
-            Si encuentra un error puede mandarme una descripción y/o una imagen del problema a mi Correo electronico
-          </h3>
-        </div>
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Variantes-de-madera/icono.png" alt="" />
-              <a href="https://www.mediafire.com/file/33w1ylafln149fh/Variantes_de_maderas.mcaddon/file" target="_blank">
+              <img src="https://www.youtube.com/img/favicon_144.png" alt="" /><a href="descarga" alt="">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
