--- a/yt/seo/ChoesinCraft/descarga.html
+++ b/yt/seo/ChoesinCraft/descarga.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>ChoesinCraft(addon)|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-   <script src="/js/seo/ChoesinCraft.js"></script> 
   </head>
+  <body>
+   <script src="/js/seo/ChoesinCraft.js"></script> 
+  </body>
 </html>
