--- a/addons/Fundas-de-equipamiento/index.html
+++ b/addons/Fundas-de-equipamiento/index.html
@@ -40,9 +40,76 @@
         </div>
         <div class="contenedor">
           <div class="galeria-port">
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_aga.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_black.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_blue.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_brown.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_cyan.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_gag.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_gray.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_green.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_koopa.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_light_blue.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_lime.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_magenta.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_orange.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_pink.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_purple.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_red.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_seo.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_silver.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_stk.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_white.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Fundas-de-equipamiento/elytra_yellow.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="contenedor">
+          <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
-              <a href="#" target="_blank">
+              <img src="/img/addons/Fundas-de-equipamiento/icono.png" alt="" />
+              <a href="https://www.mediafire.com/file/8x9xmtpunm9zak7/Fundas_de_equipamiento.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
