--- a/yt/index.html
+++ b/yt/index.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Chisel(addon)|AdrianCraft</title>
+    <title>Addons|AdrianCraft</title>
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
@@ -18,7 +18,8 @@
         <a href="/yt">YT</a>
       </nav>
       <section class="textos-header">
-        <h1>Chisel</h1>
+        <h1>Mejora tu Minecraft</h1>
+        <h2>Con estos addons</h2>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
@@ -28,17 +29,14 @@
     </header>
     <main>
       <section class="section-1">
-        <div class="texto-box">
-          <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
-        </div>
         <div class="contenedor">
-          <div class="galeria-port">
+          <h4 class="titulo">Seo</h4>
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
-              <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
+              <img src="https://www.youtube.com/img/favicon_144.png" alt="" />
+              <a href="/yt/seo">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
-                  <p>Descargar</p>
+                  <p>Variantes de madera</p>
                 </div>
               </a>
             </div>
@@ -53,7 +51,8 @@
           <a
             target="_blank"
             class="link-s"
-            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte"
+            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft,
+          Me comunico contigo para decirte"
             >agacraft.addons@gmail.com</a
           >
         </div>
