--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -31,7 +31,8 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="https://www.youtube.com/img/favicon_144.png" alt="" /><a href="https://www.mediafire.com/file/du063qv9gtiosxo/ChoesinCraft.mcaddon/file" alt="">
+              <img src="https://www.youtube.com/img/favicon_144.png" alt="" />
+              <a href="https://www.mediafire.com/file/du063qv9gtiosxo/ChoesinCraft.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
