--- a/yt/index.html
+++ b/yt/index.html
@@ -31,6 +31,7 @@
       <section class="section-1">
         <div class="contenedor">
           <h4 class="titulo">Seo</h4>
+          <div class="galeria-port">
             <div class="imagen-port">
               <img src="https://www.youtube.com/img/favicon_144.png" alt="" />
               <a href="/yt/seo">
