--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -31,6 +31,18 @@
         <div class="texto-box">
           <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
         </div>
+        <div class="texto-box">
+          <table>
+            <tr>
+              <td>
+                Hola
+              </td>
+              <td>
+                Adios
+              </td>
+            </tr>
+          </table>
+        </div>
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
