--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -35,10 +35,50 @@
           <table>
             <tr>
               <td>
-                Hola
+                <h3 class="texto">
+                  Diamante
+                </h3>
               </td>
               <td>
-                Adios
+                <h3 class="texto">
+                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Esmeralda
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Oro
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Hierro
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
               </td>
             </tr>
           </table>
