--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="/css/tablas.css" />
   </head>
   <body>
     <header>
