--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Chisel(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Inicio|AdrianCraft</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/links.css">
+    <link rel="stylesheet" href="/css/estilos.css"> 
   </head>
   <body>
     <header>
@@ -18,79 +18,60 @@
         <a href="/yt">YT</a>
       </nav>
       <section class="textos-header">
-        <h1>Chisel</h1>
+        <h1>Mejora tu Minecraft</h1>
+        <h2>Con estos addons y texturas</h2>
       </section>
       <div class="wave">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none">
-          <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
+          <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z">
+          </path>
         </svg>
       </div>
     </header>
     <main>
       <section class="section-1">
-        <div class="texto-box">
-          <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
-        </div>
-        <div class="texto-box">
-          <table>
-            <tr>
-              <td>
-                <h3 class="texto">
-                  Diamante
-                </h3>
-              </td>
-              <td>
-                <h3 class="texto">
-                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
-                </h3>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3 class="texto">
-                  Esmeralda
-                </h3>
-              </td>
-              <td>
-                <h3 class="texto">
-                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
-                </h3>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3 class="texto">
-                  Oro
-                </h3>
-              </td>
-              <td>
-                <h3 class="texto">
-                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
-                </h3>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3 class="texto">
-                  Hierro
-                </h3>
-              </td>
-              <td>
-                <h3 class="texto">
-                  iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
-                </h3>
-              </td>
-            </tr>
-          </table>
-        </div>
         <div class="contenedor">
+          <h2 class="titulo">Addon mas reciente</h2>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
-              <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
+              <img src="/img/addons/Variantes-de-madera/icono.png" alt="">
+              <a href="/addons/Variantes-de-maderas">
                 <div class="hover-galeria">
-                  <img src="/img/click.png" alt="" />
-                  <p>Descargar</p>
+                  <img src="/img/click.png" alt="">
+                  <p>Variantes de madera</p>
+                </div>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <section class="section-2">
+        <div class="contenedor">
+          <h2 class="titulo">Textura mas reciente</h2>
+          <div class="galeria-port">
+            <div class="imagen-port">
+              <img src="/img/texturas/Escudo-secundario/icono.png" alt="">
+              <a href="/texturas/Escudo-secundario/">
+                <div class="hover-galeria">
+                  <img src="/img/click.png" alt="">
+                  <p>Escudo secundario</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-1">
+        <div class="contenedor">
+          <h2 class="titulo">Contenido mas reciente para YouTube</h2>
+          <div class="galeria-port">
+            <div class="imagen-port">
+              <img src="https://www.youtube.com/img/favicon_144.png" alt="">
+              <a href="/seo">
+                <div class="hover-galeria">
+                  <img src="/img/click.png" alt="">
+                  <p>Contenido para YT</p>
                 </div>
               </a>
             </div>
@@ -102,16 +83,11 @@
       <div class="contenedor-footer">
         <div class="content-foo">
           <h4>Correo electronico</h4>
-          <a
-            target="_blank"
-            class="link-s"
-            href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte"
-            >agacraft.addons@gmail.com</a
-          >
+          <a target="_blank" class="link-s" href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte">agacraft.addons@gmail.com</a>
         </div>
         <div class="content-foo">
           <h4>YouTube</h4>
-          <a class="link-s" target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
+          <a class="link-s"  target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
         </div>
       </div>
       <h2 class="titulo-final">&copy; AdrianCraft</h2>
