--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -32,10 +32,22 @@
         <div class="texto-box">
           <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
         </div>
-        <input id="bo1" type="submit" value="bloques" onclick="showDiv1()">
-        <input id="bo2" type="submit" value="bloques" onclick="noShowDiv1()">
+        <input class="btn1" id="bo1" type="submit" value="bloques" onclick="showDiv1()">
+        <input class="btn1" id="bo2" type="submit" value="bloques" onclick="noShowDiv1()" style="display: none">
         <div class="texto-box" id="div1" style="display: none">
           <table>
+            <tr>
+              <th>
+                <h3 class="texto">
+                  Bloques:
+                </h3>
+              </th>
+              <th>
+                <h3 class="texto">
+                  Picable con:
+                </h3>
+              </th>
+            </tr>
             <tr>
               <td>
                 <h3 class="texto">
