--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -33,8 +33,10 @@
         <div class="texto-box">
           <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
         </div>
+        <div class="contenedor">
         <input class="btn1" id="bo1" type="button" value="bloques" onclick="showDiv1()">
         <input class="btn1" id="bo2" type="button" value="bloques" onclick="noShowDiv1()" style="display: none">
+        </div>
         <div class="texto-box" id="div1" style="display: none">
           <table>
             <tr>
