--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -99,6 +99,54 @@
                 </h3>
               </td>
             </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Lapislazuli
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  stone_pickaxe, copper_pickaxe, iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Marmol
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  wooden_pickaxe, amatist_pickaxe, stone_pickaxe, copper_pickaxe, iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Carbon
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  wooden_pickaxe, amatist_pickaxe, stone_pickaxe, copper_pickaxe, iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Obsidian
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
           </table>
         </div>
         <div class="contenedor">
