--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -147,6 +147,30 @@
                 </h3>
               </td>
             </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Piedra de lava
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  wooden_pickaxe, amatist_pickaxe, stone_pickaxe, copper_pickaxe, iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3 class="texto">
+                  Concreto
+                </h3>
+              </td>
+              <td>
+                <h3 class="texto">
+                  wooden_pickaxe, amatist_pickaxe, stone_pickaxe, copper_pickaxe, iron_pickaxe, diamond_pickaxe, netherite_pickaxe, ruby_pickaxe y emerald_pickaxe
+                </h3>
+              </td>
+            </tr>
           </table>
         </div>
         <div class="contenedor">
