--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -175,6 +175,19 @@
         </div>
         <div class="contenedor">
           <div class="galeria-port">
+            <div class="imagen-craft">
+              <img src="/img/addons/Chisel/Chisel.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Chisel/offsettool.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/Chisel/lavastone.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="contenedor">
+          <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/proximamente.png" alt="" />
               <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
