--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <script src="/js/esconder.js"></script>
-    <script type="text/javascript>
+    <script type="text/javascript">
                   function validar (){
                     var user = document.getElementById("user").value;
                     var pass = document.getElementById("pass").value;
