--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -43,8 +43,8 @@
     <main>
       <section class="section-1">
         <div class="centro" id="login">
-          <label>Usuario</label><input type="text" name="Usuario" id="user">
-          <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
+          <label>Usuario</label><input type="text" name="Usuario" id="user"></br>
+          <label>Contraseña</label><input type="password" name="Contraseña" id="pass"></br>
           <input type="button" name id="btn" value="Verificar" onclick="validar()">
         </div>
         <div class="contenedor" id="descargar" style="display: none">
