--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -8,7 +8,8 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
-    <script src="/js/esconder.js"></script>
+    <link rel="stylesheet" href="/css/tablas.css" />
+    <script src="/js/seo/ChoesinCraft.js"></script>
     <script type="text/javascript">
                   function validar (){
                     var user = document.getElementById("user").value;
