--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -60,9 +60,9 @@
         <div class="centro" id="login">
           <label>Usuario</label><input type="text" name="Usuario" id="user"></br>
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
-          <input type="button" name id="btn1" value="-" onclick="pass()">
-          <input type="button" name id="btn2" value="°" onclick="passNo()"></br>
-          <input type="button" name id="btn" value="Verificar" onclick="validar()">
+          <input type="button" class name id="btn1" value="-" onclick="pass()">
+          <input type="button" class name id="btn2" value="°" onclick="passNo()"></br>
+          <input type="button" class name id="btn" value="Verificar" onclick="validar()">
           <p id="no"></p>
         </div>
         <div class="contenedor" id="descargar" style="display: none">
