--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -60,8 +60,8 @@
         <div class="centro" id="login">
           <label>Usuario</label><input type="text" name="Usuario" id="user"></br>
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
-          <input type="button" class="btn1" name id="btn1" value="-" onclick="pass()" style="display: none">
-          <input type="button" class="btn2" name id="btn2" value="°" onclick="passNo()"></br>
+          <input type="button" class="btn1" name id="btn1" value="-" onclick="pass()">
+          <input type="button" class="btn2" name id="btn2" value="°" onclick="passNo()" style="display: none"></br>
           <input type="button" class="btn" name id="btn" value="Verificar" onclick="validar()">
           <p id="no"></p>
         </div>
