--- a/yt/seo/ChoesinCraft/index.html
+++ b/yt/seo/ChoesinCraft/index.html
@@ -26,7 +26,7 @@
           const user = document.getElementById("user").value;
           const pass = document.getElementById("pass").value;
                                                              
-          if(user=="1" && pass=="2"){
+          if(user=="SeoMC99" && pass=="@NJM13+PJS13**"){
             alert("usuario y contraseña validos");
             document.getElementById('login').style.display = 'none';
             document.getElementById('descargar').style.display = '';
