--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -17,7 +17,7 @@
         <a href="/">Inicio</a>
         <a href="/addons">Addons</a>
         <a href="/texturas">Texturas</a>
-        <a href="/yt">YT</a>
+        <a href="/seo">SeoMC99</a>
       </nav>
       <section class="textos-header">
         <h1>Chisel</h1>
