--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/tablas.css" />
+    <link rel="stylesheet" href="/css/botones.css" />
     <script src="/js/seo/ChoesinCraft.js"></script>
   </head>
   <body>
@@ -17,7 +18,7 @@
         <a href="/">Inicio</a>
         <a href="/addons">Addons</a>
         <a href="/texturas">Texturas</a>
-        <a href="/yt">YT</a>
+        <a href="/seo">SeoMC99</a>
       </nav>
       <section class="textos-header">
         <h1>ChoesinCraft</h1>
