--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="/css/tablas.css" />
     <link rel="stylesheet" href="/css/botones.css" />
     <script src="/js/seo/ChoesinCraft.js"></script>
   </head>
@@ -34,8 +33,8 @@
         <div class="centro" id="login">
           <label>Usuario</label><input type="text" name="Usuario" id="user"></br>
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
-          <input type="button" class="btn1" name id="btn1" value="-" onclick="pass()">
-          <input type="button" class="btn2" name id="btn2" value="°" onclick="passNo()" style="display: none"></br>
+          <input type="button" class="btnm" name id="btn1" value="-" onclick="pass()">
+          <input type="button" class="btnm" name id="btn2" value="o" onclick="passNo()" style="display: none"></br>
           <input type="button" class="btn" name id="btn" value="Verificar" onclick="validar()">
           <p id="no"></p>
         </div>
