--- a/seo/index.html
+++ b/seo/index.html
@@ -15,7 +15,7 @@
         <a href="/">Inicio</a>
         <a href="/addons">Addons</a>
         <a href="/texturas">Texturas</a>
-        <a href="/yt">YT</a>
+        <a href="/seo">SeoMC99</a>
       </nav>
       <section class="textos-header">
         <h1>Aqui estan los addons para SeoMC99</h1>
