--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       </section>
       <section class="section-1">
         <div class="contenedor">
-          <h2 class="titulo">Contenido mas reciente para YouTube</h2>
+          <h2 class="titulo">Contenido mas reciente para SeoMC99</h2>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="https://www.youtube.com/img/favicon_144.png" alt="">
+              <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/c56e54dd-4167-4bd1-8815-2790055453fa-profile_image-70x70.png" alt="">
               <a href="/seo">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="">
