--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -173,6 +173,7 @@
             </tr>
           </table>
         </div>
+        <!--
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-craft">
@@ -186,10 +187,11 @@
             </div>
           </div>
         </div>
+        -->
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
+              <img src="/img/addons/chisel/icon.png" alt="" />
               <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
