--- a/addons/index.html
+++ b/addons/index.html
@@ -33,7 +33,7 @@
           <h4 class="titulo">Addons</h4>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
+              <img src="/img/addons/chisel/icono.png" alt="" />
               <a href="/addons/Chisel">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
