--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <h2 class="titulo">Addon mas reciente</h2>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/Variantes-de-madera/icono.png" alt="">
-              <a href="/addons/Variantes-de-maderas">
+              <img src="/img/addons/chisel/icono.png" alt="">
+              <a href="/addons/Chisel">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="">
                   <p>Variantes de madera</p>
