--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -191,7 +191,7 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/addons/chisel/icon.png" alt="" />
+              <img src="/img/addons/chisel/icono.png" alt="" />
               <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
