--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="/addons/Chisel">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="">
-                  <p>Variantes de madera</p>
+                  <p>Chisel</p>
                 </div>
               </a>
             </div>
