--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -41,7 +41,7 @@
         <div class="contenedor" id="descargar" style="display: none">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/c56e54dd-4167-4bd1-8815-2790055453fa-profile_image-70x70.png" alt="" />
+              <img src="/img/seo/icono.png" alt="" />
               <a href="https://www.mediafire.com/file/du063qv9gtiosxo/ChoesinCraft.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
