--- a/seo/index.html
+++ b/seo/index.html
@@ -33,7 +33,7 @@
           <h2 class="titulo">Addons</h2>
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/c56e54dd-4167-4bd1-8815-2790055453fa-profile_image-70x70.png" alt="" />
+              <img src="/img/seo/icono.png" alt="" />
               <a href="ChoesinCraft">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
