--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -173,7 +173,11 @@
             </tr>
           </table>
         </div>
-        <div class="contenedor">
+        <div class="centro">
+          <input class="btn1" id="bo3" type="button" value="Bloques >" onclick="showDiv2()">
+          <input class="btn1" id="bo4" type="button" value="Bloques <" onclick="noShowDiv2()" style="display: none">
+        </div>
+        <div class="contenedor" id="div2" style="display: none">
           <div class="galeria-port">
             <div class="imagen-craft">
               <img src="/img/addons/chisel/Chisel.png" alt="" />
