--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -174,8 +174,8 @@
           </table>
         </div>
         <div class="centro">
-          <input class="btn1" id="bo3" type="button" value="Bloques >" onclick="showDiv2()">
-          <input class="btn1" id="bo4" type="button" value="Bloques <" onclick="noShowDiv2()" style="display: none">
+          <input class="btn1" id="bo3" type="button" value="Crafteos >" onclick="showDiv2()">
+          <input class="btn1" id="bo4" type="button" value="Crafteos <" onclick="noShowDiv2()" style="display: none">
         </div>
         <div class="contenedor" id="div2" style="display: none">
           <div class="galeria-port">
