--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -34,13 +34,31 @@
           <h3 class="texto">Chisel es un addon similar al mod de java agregando crafteos y funcionalidades parecidas</h3>
         </div>
         <div class="centro">
-          <input class="btn1" id="bo1" type="button" value=" Bloques >" onclick="showDiv1()">
-          <input class="btn1" id="bo2" type="button" value=" Bloques <" onclick="noShowDiv1()" style="display: none">
+          <input class="btn1" id="bo1" type="button" value="Crafteos >" onclick="showDiv1()">
+          <input class="btn1" id="bo2" type="button" value="Crafteos <" onclick="noShowDiv1()" style="display: none">
           
-          <input class="btn1" id="bo3" type="button" value="Crafteos >" onclick="showDiv2()">
-          <input class="btn1" id="bo4" type="button" value="Crafteos <" onclick="noShowDiv2()" style="display: none">
+          <input class="btn1" id="bo3" type="button" value="Bloques  >" onclick="showDiv2()">
+          <input class="btn1" id="bo4" type="button" value="Bloques  <" onclick="noShowDiv2()" style="display: none">
         </div>
-        <div class="texto-box" id="div1" style="display: none">
+        <div class="contenedor" id="div1" style="display: none">
+          <div class="galeria-port">
+            <div class="imagen-craft">
+              <img src="/img/addons/chisel/Chisel.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/chisel/offsettool.png" alt="" />
+            </div>
+            <div class="imagen-craft">
+              <img src="/img/addons/chisel/lavastone.png" alt="" />
+            </div>
+          </div>
+          <div class="texto-box">
+            <h3 class="texto">
+              Los crafteos de los demas bloques se creean con el cortapiedras y los puedes ir cambiando con el cincel
+            </h3>
+          </div>
+        </div>
+        <div class="texto-box" id="div2" style="display: none">
           <table>
             <tr>
               <th>
@@ -175,19 +193,6 @@
               </td>
             </tr>
           </table>
-        </div>
-        <div class="contenedor" id="div2" style="display: none">
-          <div class="galeria-port">
-            <div class="imagen-craft">
-              <img src="/img/addons/chisel/Chisel.png" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/chisel/offsettool.png" alt="" />
-            </div>
-            <div class="imagen-craft">
-              <img src="/img/addons/chisel/lavastone.png" alt="" />
-            </div>
-          </div>
         </div>
         <div class="contenedor">
           <div class="galeria-port">
