--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -198,7 +198,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/addons/chisel/icono.png" alt="" />
-              <a href="https://www.mediafire.com/folder/v8tdbv0ihoc5g/chisel+version" target="_blank">
+              <a href="https://www.mediafire.com/file/9kxrq09jv1ee6hl/Aga_Chisel_v1.0.0.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
