--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
           </div>
         </div>
       </section>
+      <section class="section-2">
+        <div class="contenedor">
+          <h2 class="titulo">Links comunidades</h2>
+          <div class="galeria-port">
+            <iframe src="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w"
+                    width="400" height="500" allowtransparency="true" frameborder="0"
+                    sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <iframe src="https://discord.com/widget?id=705611526735921163&theme=dark"
+                    width="400" height="500" allowtransparency="true" frameborder="0"
+                    sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="contenedor-footer">
