--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     <footer>
       <div class="contenedor-footer">
         <div class="content-foo">
+          <h4>Discord</h4>
+          <a class="link-s"  target="_blank" href="https://discord.gg/9BqzsNpvpS">AdrianCraft</a>
+        </div>
+        <div class="content-foo">
           <h4>Correo electronico</h4>
           <a target="_blank" class="link-s" href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte">agacraft.addons@gmail.com</a>
         </div>
