--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="contenedor-footer">
         <div class="content-foo">
           <h4>Discord</h4>
-          <a class="link-s"  target="_blank" href="https://discord.gg/9BqzsNpvpS">AdrianCraft</a>
+          <a class="link-s"  target="_blank" href="https://discord.gg/9BqzsNpvpS">AgaCraft</a>
         </div>
         <div class="content-foo">
           <h4>Correo electronico</h4>
