--- a/texturas/Escudo-secundario/index.html
+++ b/texturas/Escudo-secundario/index.html
@@ -66,6 +66,10 @@
     <footer>
       <div class="contenedor-footer">
         <div class="content-foo">
+          <h4>Discord</h4>
+          <a class="link-s"  target="_blank" href="https://discord.gg/9BqzsNpvpS">AgaCraft</a>
+        </div>
+        <div class="content-foo">
           <h4>Correo electronico</h4>
           <a
             target="_blank"
