--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <a class="link-s"  target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
         </div>
       </div>
-      <h2 class="titulo-final">&copy; AdrianCraft</h2>
+      <h2 class="titulo-final"><a class="link"  target="_blank" href="/AdrianCraft">&copy; AdrianCraft</a></h2>
     </footer>
   </body>
 </html>
