--- a/AdrianCraft/index.html
+++ b/AdrianCraft/index.html
@@ -31,12 +31,13 @@
     <main>
       <section class="section-1">
         <div class="contenedor">
+          <h2 class="titulo">AdrianCraft</h2>
           <h3 class="texto">AdrianCraft es un programador y creador de addons que a creado 4 addons y 2 programas en js de nacionalidad Mexicana.</h3>
           <h3 class="texto">Actualmente lleva aprendidos 2 lenguajes java y javaScritpt.</h3>
         </div>
       </section>
       <section class="section-2">
-        <div class="contenedor">
+        <div class="contenedor"><h2 class="titulo">Aga</h2>
           <h3 class="texto">AGA significa: "Addons Generados por AdrianCraft"</h3>
           <h3 class="texto">Es por esta razon que los addons publicos presentados en esta web tienen la extencion "aga:" en los bloques y/o items, los addons privados como <a href="/seo/ChoesinCraft">ChoesinCraft</a> fueron creados por AdrianCraft pero las id son diferentes a peticion del qe solicito el addon</h3>
         </div>
