--- a/AdrianCraft/index.html
+++ b/AdrianCraft/index.html
@@ -39,7 +39,7 @@
       <section class="section-2">
         <div class="contenedor"><h2 class="titulo">Aga</h2>
           <h3 class="texto">AGA significa: "Addons Generados por AdrianCraft"</h3>
-          <h3 class="texto">Es por esta razon que los addons publicos presentados en esta web tienen la extencion "aga:" en los bloques y/o items, los addons privados como <a href="/seo/ChoesinCraft">ChoesinCraft</a> fueron creados por AdrianCraft pero las id son diferentes a peticion del qe solicito el addon</h3>
+          <h3 class="texto">Es por esta razon que los addons publicos presentados en esta web tienen la extencion "aga:" en los bloques y/o items, los addons privados como <a href="/seo/ChoesinCraft">ChoesinCraft</a> fueron creados por AdrianCraft pero las id son diferentes a peticion de el que solicito el addon</h3>
         </div>
       </section>
     </main>
