--- a/addons/Chisel/index.html
+++ b/addons/Chisel/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/tablas.css" />
+    <script src="/js/download.js"></script>
     <script src="/js/esconder.js"></script>
   </head>
   <body>
@@ -198,7 +199,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/addons/chisel/icono.png" alt="" />
-              <a href="https://www.mediafire.com/file/9kxrq09jv1ee6hl/Aga_Chisel_v1.0.0.mcaddon/file" target="_blank">
+              <a id="download" href="https://www.mediafire.com/file/9kxrq09jv1ee6hl/Aga_Chisel_v1.0.0.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
