--- a/addons/Fundas-de-equipamiento/index.html
+++ b/addons/Fundas-de-equipamiento/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
+    <script src="/js/download.js"></script>
   </head>
   <body>
     <header>
@@ -109,7 +110,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/addons/Fundas-de-equipamiento/icono.png" alt="" />
-              <a href="https://www.mediafire.com/file/8x9xmtpunm9zak7/Fundas_de_equipamiento.mcaddon/file" target="_blank">
+              <a id="download" href="https://www.mediafire.com/file/8x9xmtpunm9zak7/Fundas_de_equipamiento.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
