--- a/texturas/Escudo-secundario/index.html
+++ b/texturas/Escudo-secundario/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
+    <script src="/js/download.js"></script>
   </head>
   <body>
     <header>
@@ -52,7 +53,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/texturas/Escudo-secundario/icono.png" alt="" />
-              <a href="https://www.mediafire.com/file/ap37rj07w05lxew/Escudo_secundario.mcpack/file" target="_blank">
+              <a id="download" href="https://www.mediafire.com/file/ap37rj07w05lxew/Escudo_secundario.mcpack/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Escudo secundario</p>
