--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/botones.css" />
     <script src="/js/seo/ChoesinCraft.js"></script>
+    <script src="/js/download.js"></script>
   </head>
   <body>
     <header>
@@ -42,7 +43,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/seo/icono.png" alt="" />
-              <a href="https://www.mediafire.com/file/du063qv9gtiosxo/ChoesinCraft.mcaddon/file" target="_blank">
+              <a id="load" href="https://www.mediafire.com/file/du063qv9gtiosxo/ChoesinCraft.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
