--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/botones.css" />
     <script src="/js/seo/ChoesinCraft.js"></script>
-    <script src="/js/cifrado.js"></script>
+    <script type="module" src="/js/cifrado.js"></script>
   </head>
   <body>
     <header>
