--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="/css/links.css" />
     <link rel="stylesheet" href="/css/estilos.css" />
     <link rel="stylesheet" href="/css/botones.css" />
-    <script src="/js/seo/ChoesinCraft.js"></script>
-    <script type="module" src="/js/cifrado.js"></script>
+    <script src="/js/seo/ChoesinCraft.js" type="module"></script>
   </head>
   <body>
     <header>
