--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ChoesinCraft(addon)|AdrianCraft</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/links.css" />
-    <link rel="stylesheet" href="/css/estilos.css" />
-    <link rel="stylesheet" href="/css/botones.css" />
-    <script src="/js/seo/ChoesinCraft.js" type="module"></script>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="/">Inicio</a>
-        <a href="/addons">Addons</a>
-        <a href="/texturas">Texturas</a>
-        <a href="/seo">SeoMC99</a>
-      </nav>
-      <section class="textos-header">
-        <h1>ChoesinCraft</h1>
-      </section>
-      <div class="wave">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none">
-          <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
-        </svg>
-      </div>
-    </header>
-    <main>
-      <section class="section-1">
-        <div class="centro" id="login">
-          <label>Usuario</label><input type="text" name="Usuario" id="user"></br>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>ChoesinCraft(addon)|AdrianCraft</title>
+	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="/css/links.css" />
+	<link rel="stylesheet" href="/css/estilos.css" />
+	<link rel="stylesheet" href="/css/botones.css" />
+	<script type="module">
+		import {pass, passNo, validar} from '/js/seo/ChoesinCraft.js'; document.addEventListener('keydown', tecla => {
+      let codigoTecla = tecla.keyCode;
+      if (codigoTecla == 13) { window.location.href = document.links.download.href;
+      validar();
+    }
+		});
+	</script>
+</head>
+
+<body>
+	<header>
+		<nav>
+			<a href="/">Inicio</a>
+			<a href="/addons">Addons</a>
+			<a href="/texturas">Texturas</a>
+			<a href="/seo">SeoMC99</a>
+		</nav>
+		<section class="textos-header">
+			<h1>ChoesinCraft</h1>
+		</section>
+		<div class="wave">
+			<svg viewBox="0 0 500 150" preserveAspectRatio="none">
+				<path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path>
+			</svg>
+		</div>
+	</header>
+	<main>
+		<section class="section-1">
+			<div class="centro" id="login">
+				<label>Usuario</label><input type="text" name="Usuario" id="user"></br>
           <label>Contraseña</label><input type="password" name="Contraseña" id="pass">
           <input type="button" class="btnm" name id="btn1" value="-" onclick="pass()">
           <input type="button" class="btnm" name id="btn2" value="o" onclick="passNo()" style="display: none"></br>
