--- a/seo/ChoesinCraft/index.html
+++ b/seo/ChoesinCraft/index.html
@@ -10,14 +10,7 @@
 	<link rel="stylesheet" href="/css/links.css" />
 	<link rel="stylesheet" href="/css/estilos.css" />
 	<link rel="stylesheet" href="/css/botones.css" />
-	<script type="module">
-		import {pass, passNo, validar} from '/js/seo/ChoesinCraft.js'; document.addEventListener('keydown', tecla => {
-      let codigoTecla = tecla.keyCode;
-      if (codigoTecla == 13) { window.location.href = document.links.download.href;
-      validar();
-    }
-		});
-	</script>
+<script src="/js/seo/ChoesinCraft.js"></script>
 </head>
 
 <body>
