--- a/AdrianCraft/index.html
+++ b/AdrianCraft/index.html
@@ -42,24 +42,8 @@
           <h3 class="texto">Es por esta razon que los addons publicos presentados en esta web tienen la extencion "aga:" en los bloques y/o items, los addons privados como <a href="/seo/ChoesinCraft">ChoesinCraft</a> fueron creados por AdrianCraft pero las id son diferentes a peticion de el que solicito el addon</h3>
         </div>
       </section>
-    </main>
-    <footer>
-      <div class="contenedor-footer">
-        <div class="content-foo">
-          <h4>Discord</h4>
-          <a class="link-s" target="_blank" href="https://discord.gg/9BqzsNpvpS">AgaCraft</a>
-        </div>
-        <div class="content-foo">
-          <h4>Correo electronico</h4>
-          <a target="_blank" class="link-s" href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte">agacraft.addons@gmail.com</a>
-        </div>
-        <div class="content-foo">
-          <h4>YouTube</h4>
-          <a class="link-s" target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
-        </div>
-      </div>
-      <h2 class="titulo-final">&copy; AdrianCraft</h2>
-    </footer>
+      <section class="section-1">
+      
 <div id="disqus_thread"></div>
 <script>
     /**
@@ -79,5 +63,24 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      </section>
+    </main>
+    <footer>
+      <div class="contenedor-footer">
+        <div class="content-foo">
+          <h4>Discord</h4>
+          <a class="link-s" target="_blank" href="https://discord.gg/9BqzsNpvpS">AgaCraft</a>
+        </div>
+        <div class="content-foo">
+          <h4>Correo electronico</h4>
+          <a target="_blank" class="link-s" href="mailto:agacraft.addons@gmail.com?body=Hola AdrianCraft, Me comunico contigo para decirte">agacraft.addons@gmail.com</a>
+        </div>
+        <div class="content-foo">
+          <h4>YouTube</h4>
+          <a class="link-s" target="_blank" href="https://www.youtube.com/channel/UCSJAPPOzlybP_xSJj-E5W3w">AdrianCraft</a>
+        </div>
+      </div>
+      <h2 class="titulo-final">&copy; AdrianCraft</h2>
+    </footer>
   </body>
 </html>
