--- a/AdrianCraft/index.html
+++ b/AdrianCraft/index.html
@@ -45,7 +45,7 @@
       <section class="section-1">
         <div id="fb-root"></div>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v13.0" nonce="oAPTGrBx"></script>
-        <div class="fb-comments" data-href="https://adriancraft07.github.io/AdrianCraft/" data-width="600" data-numposts="5"></div>
+        <div class="fb-comments" data-href="https://adriancraft07.github.io/AdrianCraft/" data-width="600" data-numposts="5" data-colorscheme="dark"></div>
       </section>
     </main>
     <footer>
