--- a/addons/index.html
+++ b/addons/index.html
@@ -34,6 +34,15 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/proximamente.png" alt="" />
+              <a href="/addons/Home">
+                <div class="hover-galeria">
+                  <img src="/img/click.png" alt="" />
+                  <p>Home</p>
+                </div>
+              </a>
+            </div>
+            <div class="imagen-port">
+              <img src="/img/proximamente.png" alt="" />
               <a href="/addons/Fundas-de-equipamiento">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
