--- a/addons/Home/index.html
+++ b/addons/Home/index.html
@@ -46,7 +46,7 @@
           <div class="galeria-port">
             <div class="imagen-port">
               <img src="/img/proximamente.png" alt="" />
-              <a id="download" href="https://www.mediafire.com" target="_blank">
+              <a id="download" href="https://www.mediafire.com/file/pf53mgo3mc8u03v/Home.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
                   <p>Descargar</p>
