--- a/addons/Home/index.html
+++ b/addons/Home/index.html
@@ -38,14 +38,14 @@
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-craft">
-              <img src="/img/proximamente.png" alt="" />
+              <img src="/img/Home/icono.png" alt="" />
             </div>
           </div>
         </div>
         <div class="contenedor">
           <div class="galeria-port">
             <div class="imagen-port">
-              <img src="/img/proximamente.png" alt="" />
+              <img src="/img/Home/icono.png" alt="" />
               <a id="download" href="https://www.mediafire.com/file/pf53mgo3mc8u03v/Home.mcaddon/file" target="_blank">
                 <div class="hover-galeria">
                   <img src="/img/click.png" alt="" />
