--- a/php/test.html
+++ b/php/test.html
@@ -60,6 +60,8 @@
                                             </select>
                                             <input type="checkbox" class="center" id="condition" name="condition"><a href="#" class="condition">Aceptar Terminos</a><br>
                                             <button class="btn btn-success text-white">Subir Servidor</button>
+					    <input type="hidden" name="_captcha" value="false">
+					    <input type="hidden" name="_next" value="https://adriancraft07.github.io/php/test">
                                         </div>
                                     </div>
                                 </div></form></div></div>
